tests/fixtures/errors/comptime_error.z
# comptime_error.z -- a provably-reachable `error` must fail compilation
# with the user's message (emit-time dead-branch elimination cannot remove
# it: MODE really is zero).

MODE: 0

main: function is {
    if MODE == 0 then error "MODE must not be zero"
    print "unreachable"
}
